--- a/assets/css/music.css
+++ b/assets/css/music.css
@@ -2,9 +2,14 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: #fff;
     color: #333;
+    padding-top: 56px;
 }
 .navbar {
     background-color: #ff69b4;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 .nav-link {
     color: #fff !important;
